--- a/app-v1.5.0/index.html
+++ b/app-v1.5.0/index.html
@@ -6,10 +6,11 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="dependencies/bpmn-js/assets/bpmn-font/css/bpmn.css" /> <!-- for lasso tool, space tool etc. -->
+  <link rel="stylesheet" href="dependencies/bpmn-js/assets/bpmn-font/css/bpmn.css" />
+  <!-- for lasso tool, space tool etc. -->
   <link rel="stylesheet" href="dependencies/diagram-js.css" /> <!-- for palette -->
   <link rel="stylesheet" href="domain-story.css" />
-  <link rel="stylesheet" href="domain-story-modeler/language/icon/icons.css" id="iconsCss"/>
+  <link rel="stylesheet" href="domain-story-modeler/language/icon/icons.css" id="iconsCss" />
 
   <title>Domain Story Modeler</title>
   <link rel="icon"
@@ -19,7 +20,8 @@
 
 <body>
 
-  <input type="file" multiple accept=".svg, image/png, image/jpeg, image/gif, image/bmp" style="display:none;" id="importIcon" onclick="this.value=null;" name="file" />
+  <input type="file" multiple accept=".svg, image/png, image/jpeg, image/gif, image/bmp" style="display:none;" id="importIcon"
+    onclick="this.value=null;" name="file" />
 
   <div id="modal" style="display:none;"></div>
   <div class ="headerAndCanvas">
@@ -27,8 +29,8 @@
     <div class="header">
       <div id="headlineAndButtons">
         <h3 id="headline">
-              <text id="title">&ltname of this Domain Story&gt</text>
-              <img src="./logo/edit_blue.png" id="edit">
+          <text id="title">&ltname of this Domain Story&gt</text>
+          <img src="./logo/edit_blue.png" id="edit">
         </h3>
         <div class="ButtonContainer">
             <div id=editModeButtons>
@@ -55,32 +57,32 @@
                       <img src="./logo/shortCutInfo.png">
                     </button>
             </div>
-            <div id="presentationModeButtons" style="display: none">
-              <button id="buttonPreviousStep" class="prevoiusStepButton" title="Previous Step">
-                <img src="./logo/previous.png">
-              </button>
-              <button id="buttonNextStep" class="NextStepButton" title="NextStep">
-                <img src="./logo/forward.png">
-              </button>
-              <button id="buttonStopReplay" class="stopReplayButton" title="Stop replay">
-                <img src="./logo/stop.png">
-              </button>
-              <div id="replayStep"> 0/0</div>
+          <div id="presentationModeButtons" style="display: none">
+            <button id="buttonPreviousStep" class="prevoiusStepButton" title="Previous Step">
+              <img src="./logo/previous.png">
+            </button>
+            <button id="buttonNextStep" class="NextStepButton" title="NextStep">
+              <img src="./logo/forward.png">
+            </button>
+            <button id="buttonStopReplay" class="stopReplayButton" title="Stop replay">
+              <img src="./logo/stop.png">
+            </button>
+            <div id="replayStep"> 0/0</div>
           </div>
           <div></div>
         </div>
       </div>
       <div id="infoContainer">
-          <div id="infoText"></div>
+        <div id="infoText"></div>
         <div id="currentDomainNameContainer">
-            <text>Domain: </text>
-            <text id="currentDomainName">default</text>
+          <text>Domain: </text>
+          <text id="currentDomainName">default</text>
         </div>
+      </div>
     </div>
+    <div id="line"></div>
+    <div id="canvas"></div>
   </div>
-  <div id="line"></div>
-  <div id="canvas"></div>
-</div>
   <div class="logoContainer">
     <div id="imgWPS">
       <img src="./logo/WPS-Logo_2023_Icon.png" height="40" width="41" />
@@ -105,14 +107,14 @@
   <div id="dstLogoInfo" style="display:none;">
     <button id="closeDSTLogoInfo">X</button>
     <br>
-    <text id= "dstLogoInnerText"></text>
+    <text id="dstLogoInnerText"></text>
     <br>
     <a href="http://www.domainstorytelling.org">domainstorytelling.org</a>
   </div>
 
   <div id="arrowDialog">
-      <div id="arrow" class="arrow" style="display:none;"></div>
-      <div id="dialog" style="display:none;">
+    <div id="arrow" class="arrow" style="display:none;"></div>
+    <div id="dialog" style="display:none;">
       <div id="dialogTitle">Title:</div>
       <div id="dialogInput">
         <input type="text" id="titleInput" maxlength="160" />
@@ -128,7 +130,7 @@
     </div>
   </div>
 
-  <div id="iconCustomizationContainer"  style ="display:none">
+  <div id="iconCustomizationContainer" style="display:none">
     <div class="iconConfigCustomization">
       <div class="topButtonRow">
         <div>
@@ -227,8 +229,8 @@
     </div>
   </div>
 
-  <div id= "keyboardShortcutInfo" style="display:none">
-    <button id ="keyboardShortcutInfoDialogButtonCancel" style="float:right; margin-left:5px">X</button>
+  <div id="keyboardShortcutInfo" style="display:none">
+    <button id="keyboardShortcutInfoDialogButtonCancel" style="float:right; margin-left:5px">X</button>
     <br>
       <table id="keyboardTable">
         <thead>
@@ -284,16 +286,16 @@
 
   <div id="dictionaryDialog" style="display:none">
     <div>
-    <div id="activityDictionary" style="float:left">
-      <text>Activities:</text>
-      <div id="activityDictionaryContainer"></div>
+      <div id="activityDictionary" style="float:left">
+        <text>Activities:</text>
+        <div id="activityDictionaryContainer"></div>
+      </div>
+      <div id="workobjectDictionary" style="float:left">
+        <text>Work Objects:</text>
+        <div id="workobjectDictionaryContainer"></div>
+      </div>
     </div>
-    <div id="workobjectDictionary" style="float:left">
-      <text>Work Objects:</text>
-      <div id= "workobjectDictionaryContainer"></div>
-    </div>
-  </div>
-  <div style="clear:both;"></div>
+    <div style="clear:both;"></div>
     <div id="dictionaryButtons">
       <button id="closeDictionaryButtonSave">Save</button>
       <button id="closeDictionaryButtonCancel">Cancel</button>
@@ -301,8 +303,8 @@
   </div>
 
   <div id="incompleteStoryInfo" style="display:none">
-  <button id="closeIncompleteStoryInfo">X</button>
-  <br>
+    <button id="closeIncompleteStoryInfo">X</button>
+    <br>
   </div>
 
   <div id="noContentOnCanvasInfo" style="display: none">
@@ -313,13 +315,13 @@
   </div>
 
   <div id="versionInfo" style="display:none">
-  <button id="closeVersionDialog">X</button>
-  <br>
-  <text>Your Domain Story was created with modeler version</text>
-  <text id="importedVersion"></text>
-  <text>. This modeler is version</text>
-  <text id="modelerVersion"></text>
-  <text>. Please check release notes for possible compatibility problems.</text>
+    <button id="closeVersionDialog">X</button>
+    <br>
+    <text>Your Domain Story was created with modeler version</text>
+    <text id="importedVersion"></text>
+    <text>. This modeler is version</text>
+    <text id="modelerVersion"></text>
+    <text>. Please check release notes for possible compatibility problems.</text>
   </div>
 
   <div id="brokenDSTInfo" style="display:none">
@@ -335,6 +337,15 @@
     <text>The .svg file you uploaded does not contain a Domain Story.</text>
   </div>
 
+  <div id="DSGVO">
+    <div id="Datenschutz">
+      <a href="https://www.wps.de/datenschutz/" target="_blank">Datenschutz</a>
+    </div>
+    <div id="Impressum">
+      <a href="https://www.wps.de/impressum/" target="_blank">Impressum</a>
+    </div>
+  </div>
+
   <script src="./app.js"></script>
   <script src="dependencies/jquery.min.js"></script>
 
@@ -342,38 +353,38 @@
     /* from http://jsfiddle.net/jAYEt/2188/
     */
     var inputQuantity = [];
-    $(function () {
-      $(".numberID").each(function (i) {
+    $(function() {
+      $(".numberID").each(function(i) {
         inputQuantity[i] = this.defaultValue;
         $(this).data("idx", i); // save this field's index to access later
       });
-      $(".numberID").on("keyup", function (e) {
+      $(".numberID").on("keyup", function(e) {
         var $field = $(this),
           val = this.value,
           $thisIndex = parseInt($field.data("idx"), 10); // retrieve the index
-        if (this.validity && this.validity.badInput || isNaN(val) || $field.is(":invalid")) {
+        if(this.validity && this.validity.badInput || isNaN(val) || $field.is(":invalid")) {
           this.value = inputQuantity[$thisIndex];
           return;
         }
-        if (val.length > Number($field.attr("maxlength"))) {
+        if(val.length > Number($field.attr("maxlength"))) {
           val = val.slice(0, 2);
           $field.val(val);
         }
         inputQuantity[$thisIndex] = val;
       });
-      $(".incrementNumber").each(function (i) {
+      $(".incrementNumber").each(function(i) {
         inputQuantity[i] = this.defaultValue;
         $(this).data("idx", i); // save this field's index to access later
       });
-      $(".incrementNumber").on("keyup", function (e) {
+      $(".incrementNumber").on("keyup", function(e) {
         var $field = $(this),
           val = this.value,
           $thisIndex = parseInt($field.data("idx"), 10); // retrieve the index
-        if (this.validity && this.validity.badInput || isNaN(val) || $field.is(":invalid")) {
+        if(this.validity && this.validity.badInput || isNaN(val) || $field.is(":invalid")) {
           this.value = inputQuantity[$thisIndex];
           return;
         }
-        if (val.length > Number($field.attr("maxlength"))) {
+        if(val.length > Number($field.attr("maxlength"))) {
           val = val.slice(0, 2);
           $field.val(val);
         }
